--- a/.github/workflows/cla-check.yml
+++ b/.github/workflows/cla-check.yml
@@ -1,14 +1,25 @@
-name: 'Check CLA'
+name: "CLA Assistant"
 on:
-  pull_request:
-    types:  [opened, reopened, synchronize]
+  issue_comment:
+    types: [created]
+  pull_request_target:
+    types: [opened, closed, synchronize]
+
+permissions:
+  actions: write
+  contents: write
+  pull-requests: write
+  statuses: write
 
 jobs:
-  check_cla:
+  CLAAssistant:
     runs-on: ubuntu-latest
     steps:
-      - name: CLA Assistant GitHub Action
-        uses: contributor-assistant/github-action@v2.3.1
+      - name: "CLA Assistant"
+        if: (github.event.comment.body == 'recheck' || github.event.comment.body == 'I have read the CLA Document and I hereby sign the CLA') || github.event_name == 'pull_request_target'
+        uses: contributor-assistant/github-action@v2.6.1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          github-token: ${{ secrets.GITHUB_TOKEN }}
-          cla-url: 'https://gist.github.com/LloyAi/9dc9ac3286e8d823e7e7279510b00aca'
+          path-to-document: 'https://gist.github.com/LloyAi/9dc9ac3286e8d823e7e7279510b00aca'
+          branch: 'main'
