--- a/.github/workflows/cla-check.yml
+++ b/.github/workflows/cla-check.yml
@@ -22,4 +22,5 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           path-to-document: 'https://gist.github.com/LloyAi/9dc9ac3286e8d823e7e7279510b00aca'
+          path-to-signatures: 'signatures/version1/cla.json'
           branch: 'main'
